--- a/docker/advocase-image/build-files/suitecrm/core/app/shell/src/themes/suite8/css/layout/_panel.scss
+++ b/docker/advocase-image/build-files/suitecrm/core/app/shell/src/themes/suite8/css/layout/_panel.scss
@@ -26,7 +26,7 @@
 
 /* Panel Card header */
 .panel-card .card-header {
-  background-color: $cool-blue;
+  background-color: $surface-color-background-blue;
   padding: 0 0.5rem;
   height: 2.3395rem;
   color: $white;
